@@ -3,6 +3,11 @@ drumkv1 - an old-school drum-kit sampler
 
 ChangeLog
 
+SVN TRUNK
+
+- Color palette hack on Qt5 dark themes. (TESTING)
+
+
 0.3.1  2012-02-08  One second bug-fix release.
 
 - Improved filters parameter sensitivity (cutoff, reso).
